--- a/examples/DissolveEffect.html
+++ b/examples/DissolveEffect.html
@@ -53,8 +53,8 @@
         import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
         const dependencies = [
-            '../assets/textures/noise/noise.png',
-            '../assets/textures/color/fire.jpg',
+            '../assets/textures/noise.png',
+            '../assets/textures/fire.jpg',
             '../assets/models/Soldier.glb'
         ];
 
