1.Add DH and MDH modeling for robotic arm. 2. Start vibe coding.

--- a/examples/dhLinks.html
+++ b/examples/dhLinks.html
@@ -33,7 +33,7 @@
     <div id="info">
         <div id="output"></div>
     </div>
-    <script type="module" src="./dhArms.js"></script>
+    <script type="module" src="./dhLinks.js"></script>
 </body>
 
 </html>
