1.Optimize simple ik scene. 2.Rebuild towerMotion demo.

--- a/examples/towerMotion.html
+++ b/examples/towerMotion.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Building Animation</title>
+    <title>TowerMotion</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
     <style>
@@ -34,7 +34,7 @@
         <div id="output"></div>
         <div>Model from Sketchfab : Projeto Estrutural - Edifício Pátio </div>
     </div>
-    <script type="module" src="buildingAnimation.js"></script>
+    <script type="module" src="towerMotion.js"></script>
 </body>
 
 </html>
