1.Upgrade cameraEditor and use new UI. 2. Upgrade something else.

--- a/examples/dissolve.html
+++ b/examples/dissolve.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Distort High Map</title>
+    <title>Dissolve</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
     <style>
@@ -32,9 +32,9 @@
 <body>
     <div id="info">
         <div id="output"></div>
-        <div>Distort High Map </div>
+        <div>three.js Dissolve</div>
     </div>
-    <script type="module" src="distortHighMap.js"></script>
+    <script type="module" src="dissolve.js"></script>
 </body>
 
 </html>
