--- a/examples/heightWarp.html
+++ b/examples/heightWarp.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> Dissolve Effect </title>
+    <title>HeightWarp</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
     <style>
@@ -32,9 +32,9 @@
 <body>
     <div id="info">
         <div id="output"></div>
-        <div>three.js Dissolve Effect </div>
+        <div>HeightWarp</div>
     </div>
-    <script type="module" src="dissolveEffect.js"></script>
+    <script type="module" src="heightWarp.js"></script>
 </body>
 
 </html>
